--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                                             <div id="cy" class="bg-gray-300">
                                             </div>
                                             <div class="row">
+                                                <div class="victory col-md-12 text-center">
+                                                    
+                                                </div>
                                                 <div class="col-md-10">
                                                     <div class="form-group" style="margin-top: 20px;">
                                                         <input class="form-control form-control-user" value=""
