--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <button id="startButton" style="display: block;"
-                                                        class="btn btn-gradient-warning text-white bg-gradient-warning btn-user btn-block">Iniciar</button>
+                                                        class="btn btn-gradient-success text-white bg-gradient-success btn-user btn-block">Iniciar</button>
                                                 </div>
                                             </div>
                                         </div>
