--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
         #cy {
-            width: 300px;
+            width: 430px;
             height: 300px;
             display: block;
         }
@@ -167,17 +167,26 @@
                                                         id="last_article"></span> ?
                                                 </h5>
                                             </div>
-                                            <div id="cy" class="bg-gray-300">
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div id="cy" class="bg-gray-300">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <div class="" id="wiki" style="padding: 19px;overflow: scroll;max-width: 50p;max-height: 300px;
+                                                        min-height: 300px;">
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="row">
                                                 <div class="victory col-md-12 text-center">
-                                                    
                                                 </div>
                                                 <div class="col-md-10">
                                                     <div class="form-group" style="margin-top: 20px;">
                                                         <input class="form-control form-control-user" value=""
-                                                            list="relatedList" id="inputRelated" type="text" name="first"
-                                                            placeholder="Digite alguma coisa" autocomplete="on">
+                                                            list="relatedList" id="inputRelated" type="text"
+                                                            name="first" placeholder="Digite alguma coisa"
+                                                            autocomplete="on">
                                                         <datalist id="relatedList"></datalist>
                                                     </div>
                                                 </div>
