--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
+                                                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif?20151024034921"
+                                                        id="loading" style="display: block;" width="450">
                                                     <div class="" id="wiki" style="padding: 19px;overflow: scroll;max-width: 50p;max-height: 300px;
                                                         min-height: 300px;">
                                                     </div>
